--- a/src/app/jsontopdf/jsontopdf.component.html
+++ b/src/app/jsontopdf/jsontopdf.component.html
@@ -1,1 +1,4 @@
 <p-button label="Download PDF" (click)="downloadPdf()"></p-button>
+
+<p-button label="Download PDF" (click)="downloadPdf()"></p-button>
+<p-button label="Download PDF" (click)="downloadPdf()"></p-button>
